--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -3,15 +3,30 @@
     "sap.app": {
         "id": "sap.ui.demo.todo",
         "type": "application",
-        "sourceTemplate": {
-            "id": "@sap/ux-app-migrator:freestyle",
-            "version": "1.18.7",
-            "toolsId": "4e6cef2f-1919-46b0-b859-c5bf1a5a66c0"
+        "title": "{{appTitle}}",
+        "applicationVersion": {
+            "version": "1.0.0"
         }
     },
+    "sap.ui": {
+		"technology": "UI5",
+		"icons": {
+			"icon": "sap-icon://task",
+			"favIcon": "",
+			"phone": "",
+			"phone@2": "",
+			"tablet": "",
+			"tablet@2": ""
+		},
+		"deviceTypes": {
+			"desktop": true,
+			"tablet": true,
+			"phone": true
+		}
+	},
     "sap.ui5": {
         "dependencies": {
-            "minUI5Version": "1.121.0",
+			"minUI5Version": "1.98.0",
             "libs": {
                 "sap.ui.core": {},
                 "sap.m": {},
